MySQL adaptation and first migration

--- a/SalesWebMVC/appsettings.json
+++ b/SalesWebMVC/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SalesWebMVCContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebMVCContext-39768fb0-0371-451d-af8d-12ce0fae119e;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SalesWebMVCContext": "server=localhost;userid=developer;password=724051;database=saleswebmvcappdb"
   }
 }
